http_server_return_env/istio/test-virtualservice/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: printenv-chain-1
spec:
  selector:
    matchLabels:
      app: printenv
      version: v1
      chain: c1
  template:
    metadata:
      labels:
        app: printenv
        version: v1
        chain: c1
    spec:
      containers:
        - name: printenv
          image: louhwz/printenv:0.0.3
          resources:
            limits:
              cpu: 20m
              memory: 50Mi
            requests:
              cpu: 20m
              memory: 50Mi
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: printenv-chain-2
spec:
  selector:
    matchLabels:
      app: printenv
      version: v2
      chain: c2
  template:
    metadata:
      labels:
        app: printenv
        version: v2
        chain: c2
    spec:
      containers:
        - name: printenv
          image: louhwz/printenv:0.0.3
          resources:
            limits:
              cpu: 20m
              memory: 50Mi
            requests:
              cpu: 20m
              memory: 50Mi
          ports:
            - containerPort: 80
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: printenv
spec:
  selector:
    app: printenv
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nettools-chain-1
spec:
  selector:
    matchLabels:
      app: nettools
      version: v1
      chain: c1
  template:
    metadata:
      labels:
        app: nettools
        version: v1
        chain: c1
    spec:
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: nettools
          image: louhwz/nettools:0.0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nettools-chain-2
spec:
  selector:
    matchLabels:
      app: nettools
      version: v2
      chain: c2
  template:
    metadata:
      labels:
        app: nettools
        version: v2
        chain: c2
    spec:
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: nettools
          image: louhwz/nettools:0.0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 100Mi
