http_server_return_env/istio/test-virtualservice/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: printenv
spec:
  hosts:
    - printenv.istio-test.svc.cluster.local
  http:
    - name: "chain-1"
      match:
        - sourceLabels:
            app: nettools
            chain: c1
      route:
        - destination:
            host: printenv.istio-test.svc.cluster.local
            subset: chain-1
    - name: "chain-2"
      match:
        - sourceLabels:
            app: nettools
            chain: c2
      route:
        - destination:
            host: printenv.istio-test.svc.cluster.local
            subset: chain-2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: printenv
spec:
  host: printenv.istio-test.svc.cluster.local
  subsets:
    - name: chain-1
      labels:
        version: v1
    - name: chain-2
      labels:
        version: v2
